<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tv_hello"
        style="@style/poppins_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_48"
        android:layout_marginTop="@dimen/spacing_48"
        android:text="@string/welcome_login"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_48"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

    <TextView
        android:id="@+id/tv_login_account"
        style="@style/poppins_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_48"
        android:layout_marginTop="68dp"
        android:text="@string/intro_login"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <EditText
        android:id="@+id/ed_login_name"
        style="@style/poppins_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_48"
        android:layout_marginTop="@dimen/spacing_64"
        android:drawableStart="@drawable/ic_account"
        android:background="@drawable/bg_selected_edit_text"
        android:drawablePadding="@dimen/spacing_8"
        android:maxLines="1"
        android:hint="@string/username"
        android:padding="@dimen/spacing_16"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_account"
        app:layout_constraintVertical_bias="0.0" />

    <com.capstone.empoweru.widget.PasswordEditText
        android:id="@+id/ed_login_password"
        style="@style/poppins_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_48"
        android:layout_marginTop="@dimen/spacing_16"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_password"
        android:drawablePadding="@dimen/spacing_8"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/bg_selected_edit_text"
        android:padding="@dimen/spacing_16"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_name"
        app:layout_constraintVertical_bias="0.0" />

    <com.capstone.empoweru.widget.ProgressButton
        android:id="@+id/btn_login"
        style="@style/Widget.ProgressButton.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_48"
        android:layout_marginTop="@dimen/spacing_64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
        app:layout_constraintVertical_bias="0.0"
        app:text="@string/button_login"
        app:textAllCaps="false" />

    <!--<Button
        android:id="@+id/btn_login_google"
        style="@style/GoogleSignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_48"
        android:layout_marginTop="@dimen/spacing_16"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/login_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />-->

    <TextView
        android:id="@+id/tv_no_account"
        style="@style/poppins_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_48"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_click_have_account"
        style="@style/poppins_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_48"
        android:text="@string/click_here"
        android:textAlignment="center"
        android:textColor="@color/red_200"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_account"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>